@@ -12,10 +12,11 @@
 import vltest_bootstrap
 
 test.scenarios('vltmt')
-test.top_filename = "t/t_gen_alw.v"  # Any, as long as runs a few cycles
+test.top_filename = "t/t_gantt.v"
+test.pli_filename = "t/t_gantt_c.cpp"
 
 test.compile(
-    v_flags2=["--prof-exec"],
+    verilator_flags2=["--prof-exec", test.pli_filename],
     # Checks below care about thread count
     threads=4)
 
