@@ -12,14 +12,15 @@
 import vltest_bootstrap
 
 test.scenarios('vlt_all')
-test.top_filename = "t/t_gen_alw.v"  # Any, as long as runs a few cycles
+test.top_filename = "t/t_gantt.v"
+test.pli_filename = "t/t_gantt_c.cpp"
 
 threads_num = (2 if test.vltmt else 1)
 
 test.compile(
     make_top_shell=False,
     make_main=False,
-    v_flags2=["--prof-exec --exe", test.pli_filename],
+    verilator_flags2=["--prof-exec --exe", test.pli_filename, "t/t_gantt_two.cpp"],
     # Checks below care about thread count, so use 2 (minimum reasonable)
     threads=threads_num,
     make_flags=["CPPFLAGS_ADD=\"-DVL_NO_LEGACY -DTEST_USE_THREADS=" + str(threads_num) + "\""])
@@ -41,11 +42,11 @@ test.run(cmd=[
     "| tee " + gantt_log])   # yapf:disable
 
 if test.vltmt:
-    test.file_grep(gantt_log, r'Total threads += 2')
-    test.file_grep(gantt_log, r'Total mtasks += 7')
+    test.file_grep(gantt_log, r'Total threads += +(\d+)', 2)
+    test.file_grep(gantt_log, r'Total mtasks += +(\d+)', 6)
 else:
-    test.file_grep(gantt_log, r'Total threads += 1')
-    test.file_grep(gantt_log, r'Total mtasks += 0')
+    test.file_grep(gantt_log, r'Total threads += +(\d+)', 1)
+    test.file_grep(gantt_log, r'Total mtasks += +(\d+)', 0)
 
 test.file_grep(gantt_log, r'\|\s+4\s+\|\s+4\.0+\s+\|\s+eval')
 
